--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body ng-app="release-tabletop">
 
-	<div class="row" ng-controller="ExampleCtrl"></div>
+	<div class="row" ng-controller="mainCtrl as main">
+		<textarea readonly ng-model="main.result"></textarea>
+		<table>
+			<tr>
+				<th ng-repeat="(key,version) in main.table[0]">
+					<span ng-bind="::key" ng-if="$index"></span>
+				</th>
+			</tr>
+			<tr ng-repeat="plugin in main.table">
+				<td ng-repeat="(key,version) in plugin">
+					<input type="checkbox" ng-if="version !== '-'" ng-click="main.onChange(plugin.Plugins, version)">
+					<span ng-bind="::version"></span>
+				</td>
+			</tr>
+		</table>
+	</div>
 
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="lib/tabletop.js"></script>
