--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="style.css"/>
 </head>
 <body ng-app="release-tabletop">
 
-	<div class="row" ng-controller="mainCtrl as main">
-		<textarea readonly ng-model="main.result"></textarea>
-		<table>
-			<tr>
-				<th ng-repeat="(key,version) in main.table[0]">
-					<span ng-bind="::key" ng-if="$index"></span>
-				</th>
-			</tr>
-			<tr ng-repeat="plugin in main.table">
-				<td ng-repeat="(key,version) in plugin">
-					<input type="checkbox" ng-if="version !== '-'" ng-click="main.onChange(plugin.Plugins, version)">
-					<span ng-bind="::version"></span>
-				</td>
-			</tr>
-		</table>
+	<div ng-controller="mainCtrl as main">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<textarea readonly ng-model="main.result"></textarea>
+			</div>
+			<table class="table table-bordered table-hover table-condensed table-striped">
+				<thead>
+				<tr>
+					<th ng-repeat="(key,version) in main.table[0]">
+						<span ng-bind="::key" ng-if="$index"></span>
+					</th>
+				</tr>
+				</thead>
+				<tbody>
+				<tr ng-repeat="plugin in main.table">
+					<td ng-repeat="(key,version) in plugin">
+						<input type="checkbox" ng-if="version !== '-'" ng-click="main.onChange(plugin.Plugins, version)">
+						<span ng-bind="::version"></span>
+					</td>
+				</tr>
+				</tbody>
+
+			</table>
+		</div>
 	</div>
 
 	<script src="bower_components/angular/angular.min.js"></script>
