small fix timeout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<thead>
 				<tr>
 					<th ng-repeat="(key,version) in main.table[0]">
-						<span ng-bind="::key" ng-if="$index"></span>
+						<span ng-bind="::key"></span>
 					</th>
 				</tr>
 				</thead>
