add hidden plugins functionality

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 			<table class="table table-bordered table-hover table-condensed table-striped">
 				<thead>
 				<tr>
-					<th>
+					<th ng-click="main.activateOldPlugins()" class="pointer">
 						<span>Plugins</span>
 					</th>
-					<th ng-repeat="item in main.headerList" ng-mouseover="main.onHeaderMouseOver(item)" ng-mouseleave="main.onMouseLeave()" ng-class="{active: item.active}">
+					<th ng-repeat="item in main.headerList" ng-if="!item.hidden" ng-mouseover="main.onHeaderMouseOver(item)" ng-mouseleave="main.onMouseLeave()" ng-class="{active: item.active}">
 						<input type="checkbox" ng-model="item.checked" ng-change="main.changeAll(item)">
 						<span ng-bind="::item.name"></span>
 					</th>
@@ -31,7 +31,7 @@
 				<tbody>
 				<tr ng-repeat="plugin in main.bodyList">
 					<td ng-bind="::plugin.name"></td>
-					<td ng-repeat="version in plugin.versions" ng-mouseover="main.onMouseOver(version)" ng-mouseleave="main.onMouseLeave()" ng-class="{active: version.active}">
+					<td ng-repeat="version in plugin.versions" ng-if="!version.hidden" ng-mouseover="main.onMouseOver(version)" ng-mouseleave="main.onMouseLeave()" ng-class="{active: version.active}">
 						<input type="checkbox" ng-if="version.value && version.value !== '-'" ng-model="version.checked" ng-change="main.changeStatus(plugin, version)">
 						<span ng-bind="::version.value"></span>
 					</td>
