add clone field

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 					</span>
 				</div>
 			</div>
+			<div class="panel-heading">
+				<div class="input-group">
+					<input type="text" class="form-control copy-clone" ng-model="main.cloneLine" placeholder="Plugin clone...">
+					<span class="input-group-btn">
+						<button class="btn btn-default" type="button" ng-click="main.copyClone()">Copy</button>
+					</span>
+				</div>
+			</div>
 			<table class="table table-bordered table-hover table-condensed table-striped">
 				<thead>
 				<tr>
